ticketing-app/k8s/nats-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-app-nats
  template:
    metadata:
      labels:
        app: ticketing-app-nats
    spec:
      containers:
      - name: ticketing-app-nats
        image: nats-streaming:0.17.0
        args: [
          "-p",
          "4222",
          "-m",
          "8222",
          "-hbi",
          "5s",
          "-hbt",
          "5s",
          "-hbf",
          "2",
          "-SD",
          "-cid",
          "ticketing",
        ]
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  type: ClusterIP
  selector:
    app: ticketing-app-nats
  ports:
  - name: nats-client
    protocol: TCP
    port: 4222
    targetPort: 4222
  - name: nats-monitoring
    protocol: TCP
    port: 8222
    targetPort: 8222
