ticketing-app/k8s/tickets-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-app-tickets
  template:
    metadata:
      labels:
        app: ticketing-app-tickets
    spec:
      containers:
      - name: ticketing-app-tickets
        image: mhshifat/ticketing-app-tickets
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  type: ClusterIP
  selector:
    app: ticketing-app-tickets
  ports:
  - name: tickets
    protocol: TCP
    port: 8001
    targetPort: 8001
