ticketing-app/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: ticketing-app.com
    http:
      paths:
        - path: /api/orders/?(.*)
          pathType: Prefix
          backend:
            service:
              name: orders-srv
              port:
                number: 8002
        - path: /api/tickets/?(.*)
          pathType: Prefix
          backend:
            service:
              name: tickets-srv
              port:
                number: 8001
        - path: /api/users/?(.*)
          pathType: Prefix
          backend:
            service:
              name: auth-srv
              port:
                number: 8000
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: web-srv
              port:
                number: 3000
  ingressClassName: nginx
